# draft-regext-ext-json-media-type

./: README.md  draft-regext-ext-json.md  draft-regext-rdap-x-media-type.md
demo/: Cargo.toml  README.md
demo/src/: client.rs  servers.rs
