[package]
name = "draft-regext-ext-rdap-media-type-demo"
version = "0.0.1"
autobins = false
edition="2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
headers = "0.3.8"
reqwest = "0.11.16"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[[bin]]
name = "servers"
path = "src/servers.rs"

[[bin]]
name = "client"
path = "src/client.rs"
