[package]
name = "draft-regext-ext-rdap-media-type-demo"
version = "0.0.1"
autobins = false
edition="2021"

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = [ "typed-header" ] }
headers = "0.4"
reqwest = "0.11"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "servers"
path = "src/servers.rs"

[[bin]]
name = "client"
path = "src/client.rs"
